--- a/Nearsens.Web/Views/Home/PlaceOffers.cshtml
+++ b/Nearsens.Web/Views/Home/PlaceOffers.cshtml
@@ -20,7 +20,7 @@
         </tr>
     </thead>
     @{
-        foreach (Nearsens.Models.Offer offer in Model.offersByPlace)
+        foreach (Nearsens.Models.GetOffersByPlaceIdQuery offer in Model.offersByPlace)
         {
 
             <tr id="@offer.Id">
