--- a/Nearsens.Web/Views/Home/Index.cshtml
+++ b/Nearsens.Web/Views/Home/Index.cshtml
@@ -10,11 +10,11 @@
             </th>
 
             <th>
-                
+
             </th>
 
             <th>
-                
+
             </th>
         </tr>
     </thead>
@@ -34,9 +34,9 @@
 
 </table>
 
-<a class="btn btn-success" id="btnAddPlace" data-toggle="modal" data-target="#myModal"> Add place </a>
+<a class="btn btn-success" id="btnAddPlace" data-toggle="modal" data-target="#newPlaceModal"> Add place </a>
 
-<div id="myModal" class="modal fade">
+<div id="newPlaceModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -65,7 +65,7 @@
                     <input type="number" id="txtLat" class="form-control" placeholder="Latitude" step="any" required />
                     <input type="number" id="txtLng" class="form-control" placeholder="Longitude" step="any" required />
 
-                    
+
 
                 </div>
                 <div class="modal-footer">
@@ -77,9 +77,35 @@
     </div>
 </div>
 
+<div id="uploadPhotosModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Place photos</h4>
+            </div>
+            <div class="modal-body">
+
+                <label class="label label-info col-lg-12" for="icon">Icon</label>
+                <br />
+                <input type="file" id="icon" class="form-control col-lg-10" /> <input id="btnUploadIcon" type="button" class="btn btn-success btn-sm col-lg-2" value="Upload" />
+                <br style="clear:both" />
+                <label class="label label-info col-lg-12" for="photos">Photos</label>
+                <br />
+                <input type="file" id="photos" class="form-control col-lg-10" multiple /> <input id="btnUploadPhotos" type="button" class="btn btn-success btn-sm col-lg-2" value="Upload" />
+
+            </div>
+            <div class="modal-footer">
+                <button type="submit" id="btnDone" class="btn btn-info" data-dismiss="modal">Done</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section scripts {
     <script type="text/javascript">
-       
+
+        var newPlaceId;
 
         $('#newPlaceForm').on('submit', function (e) {
             e.preventDefault();
@@ -99,8 +125,11 @@
                 dataType: 'json',
                 data: JSON.stringify(place),
                 success: function (data) {
+                    newPlaceId = data;
                     alert('Place added');
-                    location.reload();
+                    $('#newPlaceModal').modal('hide');
+                    $('#uploadPhotosModal').modal('show');
+                    //location.reload();
                 },
                 error: function (error) {
                     alert('Error on Login' + error.statusCode);
@@ -109,7 +138,7 @@
         });
 
         $('.btnDeletePlace').on('click', function () {
-            
+
             var placeId = $(this).parent().parent().attr('id');
 
             $.ajax({
@@ -124,6 +153,71 @@
                 }
             });
         });
+
+        $('#btnUploadIcon').on('click', function () {
+
+            var files = $("#icon").get(0).files;
+            if (files.length > 0) {
+                var icon = new FormData();
+                console.log(files.length);
+                for (i = 0; i < files.length; i++) {
+                    icon.append("file" + i, files[i]);
+                }
+                uploadIcon(icon);
+            }
+        });
+
+        $('#btnUploadPhotos').on('click', function () {
+
+            var files = $("#photos").get(0).files;
+            if (files.length > 0) {
+                var photos = new FormData();
+                for (i = 0; i < files.length; i++) {
+                    photos.append("file" + i, files[i]);
+                }
+                uploadPhotos(photos);
+            }
+        });
+
+        $('#btnDone').on('click', function () {
+            location.reload();
+        });
+
+        function uploadIcon(icon) {
+            $.ajax({
+                type: "POST",
+                url: "/api/FileUpload/UploadPlaceIcon?placeId=" + newPlaceId,
+                contentType: false,
+                processData: false,
+                data: icon,
+                success: function (messages) {
+                    alert('Icon uploaded');
+                },
+                error: function (error) {
+                    console.log("icon");
+                    console.log(error);
+                    alert("Upload failed");
+                }
+            });
+        }
+
+        function uploadPhotos(photos) {
+            $.ajax({
+                type: "POST",
+                url: "/api/FileUpload/UploadPlacePhotos?placeId=" + newPlaceId,
+                contentType: false,
+                processData: false,
+                data: photos,
+                success: function (messages) {
+                    alert('Photos uploaded');
+                },
+                error: function (error) {
+                    console.log("Photos");
+                    console.log(error);
+                    alert("Upload failed");
+                }
+            });
+        }
     </script>
 }
 
