--- a/Nearsens.Web/Views/Home/Index.cshtml
+++ b/Nearsens.Web/Views/Home/Index.cshtml
@@ -191,6 +191,7 @@
                     alert('Icon uploaded');
                 },
                 error: function (error) {
+                    console.log(error);
                     alert("Upload failed");
                 }
             });
@@ -207,6 +208,7 @@
                     alert('Photos uploaded');
                 },
                 error: function (error) {
+                    console.log(error);
                     alert("Upload failed");
                 }
             });
